Regex parser for day 4

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["Pailey Quilts <paileyq@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+chrono = "0.4"
+lazy_static = "1.2.0"
+regex = "1"
